Added debug to makefile

--- a/A1/A1-StarterCode/Makefile
+++ b/A1/A1-StarterCode/Makefile
@@ -2,5 +2,8 @@ mysh: shell.c interpreter.c shellmemory.c
 	gcc -c shell.c interpreter.c shellmemory.c
 	gcc -o mysh shell.o interpreter.o shellmemory.o
 
+debug:
+	gcc -g -o mysh shell.o interpreter.o shellmemory.o
+
 clean: 
 	rm mysh; rm *.o
