--- a/A1/A1-StarterCode/Makefile
+++ b/A1/A1-StarterCode/Makefile
@@ -3,7 +3,7 @@ mysh: shell.c interpreter.c shellmemory.c
 	gcc -o mysh shell.o interpreter.o shellmemory.o
 
 debug:
-	gcc -g -o mysh shell.o interpreter.o shellmemory.o
+	gcc -g -o mysh shell.c interpreter.c shellmemory.c
 
 clean: 
 	rm mysh; rm *.o
