--- a/A3/A3-StarterCode/Makefile
+++ b/A3/A3-StarterCode/Makefile
@@ -1,5 +1,5 @@
 mysh: shell.c interpreter.c shellmemory.c
-	gcc -c shell.c interpreter.c shellmemory.c kernel.c cpu.c
+	gcc -D framesize=$(framesize) -D varmemsize=$(varmemsize) -c shell.c interpreter.c shellmemory.c kernel.c cpu.c
 	gcc -o mysh shell.o interpreter.o shellmemory.o kernel.o cpu.o
 
 debug:
