--- a/A3/A3-StarterCode/Makefile
+++ b/A3/A3-StarterCode/Makefile
@@ -3,7 +3,7 @@ mysh: shell.c interpreter.c shellmemory.c
 	gcc -o mysh shell.o interpreter.o shellmemory.o kernel.o cpu.o
 
 debug:
-	gcc -g -o mysh shell.c interpreter.c shellmemory.c kernel.c cpu.c
+	gcc -D framesize=$(framesize) -D varmemsize=$(varmemsize) -g -o mysh shell.c interpreter.c shellmemory.c kernel.c cpu.c
 
 clean: 
 	rm mysh; rm *.o
