--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "type_traits": "c",
         "vector": "c",
         "array": "c",
-        "utility": "c"
+        "utility": "c",
+        "sstream": "c"
     }
 }
